# learn

./: README.md  php.md
cmake/: note.md
cmake/gemini/: CMakeLists.txt  main.cpp
cmake/gemini/_other/: note.md
cmake/gemini/math/: CMakeLists.txt  math.cpp
cpp/: CMakeLists.txt
cpp/templates/: CMakeLists.txt  main.cpp  notes.md
css/: contain-cover.html  css-for-professional.md  flex.html  index.html  style.css
dsa/: 1. Two Pointers.md  note.md
git and github/: note.md
git-and-github/: note.md
html/: html5forprofessional.md  index.html  note.md  style.css
http/: note.md
js/: JavaScript-for-professionals.md  index.html  index.md  note.md  revesedIndex.md  script.js
learn-old/: ChatGPT.html  ChatGPT2.html  goal.md
learn-old/ChatGPT_files/: saved_resource.html
learn-old/compition programming/: log.md  note.md
learn-old/cpp/: cpp-vs_code-setup.txt  std_optinal.cpp
learn-old/dsa/step-6/: note.md
learn-old/iot/: date.txt  syllabus.md
learn-old/nodejs/notes/: 01.md  02.md  03.md  04.md  05.md
learn-old/nodejs/other/: date.txt  index.md  package-list.txt  package.json.txt  plan.md
learn-old/python/: class.py  hello.py
learn-old/react/hands-on-reactJS-from-beginner-to-expert/: note.md
learn-old/sfml/: date.txt  index.txt  note.txt
learn-old/vscode/: hello.cpp  note.md
learn-old/vscode/helloworld/: CMakeLists.txt  CMakePresets.json
react/: note.md
react/chatbot/: index.html
react/chatbot-project/: package-lock.json
react/chatbot-project/src/: App.css  App.jsx  index.css
react/ecommerce-project/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
react/react-basics/: app.js  index.html
sfml/: CMakeLists.txt  README.md
sfml/docs/sfml-essential/: note.md
sfml/inc/: AssetManager.hpp
sfml/other/: not-working.cpp
sfml/projects/Animator/: CMakeLists.txt
sfml/projects/Animator/inc/: Animator.hpp
sfml/projects/Animator/src/: AssetManager.cpp  main.cpp
sfml/projects/AssetManager/: CMakeLists.txt
sfml/projects/AssetManager/src/: AssetManager.cpp  main.cpp
sfml/projects/ColorClash/: CMakeLists.txt  main.cpp
sfml/src/: AssetManager.cpp  main.cpp
(+31 files in other folders)
