cmake_minimum_required(VERSION 3.23)
project(LearnCPP VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(templates)
# add_subdirectory(stl)
# add_subdirectory(smart_pointers)
# add_subdirectory(multithreading)
# add_subdirectory(file_io)
# add_subdirectory(networking)
# add_subdirectory(gui)
# add_subdirectory(database)
# add_subdirectory(testing)
# add_subdirectory(documentation)
# add_subdirectory(deployment)
# add_subdirectory(optimization)
# add_subdirectory(best_practices)
# add_subdirectory(benchmarks)
